feat line message